--- a/public/portofolio.html
+++ b/public/portofolio.html
@@ -90,7 +90,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="group flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project1.png');"
                               class="h-[210px] bg-[url('/public/img/project1.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
@@ -120,7 +120,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="group flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project2.png');"
                               class="h-[210px] bg-[url('/public/img/project2.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
@@ -151,7 +151,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="group flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project3.png');"
                               class="h-[210px] bg-[url('/public/img/project3.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
@@ -182,7 +182,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project4.png');"
                               class="h-[210px] bg-[url('/public/img/project4.jpg')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
@@ -215,7 +215,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project7.png');"
                               class="h-[210px] bg-[url('/public/img/project7.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6 h-[254px]">
@@ -245,7 +245,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project10.png');"
                               class="h-[210px] bg-[url('/public/img/project10.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
@@ -283,7 +283,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project5.png');"
                               class="h-[210px] bg-[url('/public/img/project5.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
@@ -315,7 +315,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project6.png');"
                               class="h-[210px] bg-[url('/public/img/project6.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
@@ -377,7 +377,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
+                         <div style="background-image: url('img/project9.png');"
                               class="h-[210px] bg-[url('/public/img/project9.png')] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                          </div>
                          <div class="p-4 md:p-6">
