--- a/public/contact.html
+++ b/public/contact.html
@@ -23,7 +23,7 @@
                          <div class="flex items-center">
                               <img class="block dark:hidden" src="img/logo-lightk.png" width="6%" alt="">
                               <img class="hidden dark:block" src="img/logo-dark.png" width="6%" alt="">
-                              <a class="flex-none text-xl font-bold text-blue-600" href="/" aria-label="Brand">Jeremi
+                              <a class="flex-none text-xl font-bold text-blue-600" href="index.html" aria-label="Brand">Jeremi
                                    Herodian</a>
                          </div>
                          <div class="sm:hidden">
@@ -54,6 +54,8 @@
                                    href="resume.html">Resume</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="portofolio.html">Portofolio</a>
+                                   <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
+                                   href="#">Publication</a>
                               <a class="font-medium text-blue-600 sm:py-6 " href="contact.html">Contact</a>
                               <input data-hs-theme-switch
                                    class="relative w-[3.25rem] h-7 bg-gray-100 checked:bg-none checked:bg-blue-600 border-2 border-slate-400 rounded-full cursor-pointer transition-colors ease-in-out duration-200 ring-1 ring-transparent focus:border-slate-700 focus:ring-slate-700 focus:outline-none appearance-none
