--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                          <div class="flex items-center">
                               <img class="block dark:hidden" src="img/logo-lightk.png" width="6%" alt="">
                               <img class="hidden dark:block" src="img/logo-dark.png" width="6%" alt="">
-                              <a class="flex-none text-xl font-bold text-blue-600" href="/" aria-label="Brand">Jeremi
+                              <a class="flex-none text-xl font-bold text-blue-600" href="index.html" aria-label="Brand">Jeremi
                                    Herodian</a>
                          </div>
                          <div class="sm:hidden">
@@ -48,11 +48,14 @@
                          class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow sm:block">
                          <div
                               class="flex flex-col gap-y-4 gap-x-0 mt-5 sm:flex-row sm:items-center sm:justify-end sm:gap-y-0 sm:gap-x-7 sm:mt-0 sm:ps-7">
-                              <a class="font-medium text-blue-600 sm:py-6" href="index.html" aria-current="page">Home</a>
+                              <a class="font-medium text-blue-600 sm:py-6" href="index.html"
+                                   aria-current="page">Home</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="resume.html">Resume</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="portofolio.html">Portofolio</a>
+                              <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
+                                   href="#">Publication</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6 "
                                    href="contact.html">Contact</a>
                               <input data-hs-theme-switch
