--- a/public/portofolio.html
+++ b/public/portofolio.html
@@ -23,7 +23,7 @@
                          <div class="flex items-center">
                               <img class="block dark:hidden" src="img/logo-lightk.png" width="6%" alt="">
                               <img class="hidden dark:block" src="img/logo-dark.png" width="6%" alt="">
-                              <a class="flex-none text-xl font-bold text-blue-600" href="/" aria-label="Brand">Jeremi
+                              <a class="flex-none text-xl font-bold text-blue-600" href="index.html" aria-label="Brand">Jeremi
                                    Herodian</a>
                          </div>
                          <div class="sm:hidden">
@@ -53,6 +53,8 @@
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="resume.html">Resume</a>
                               <a class="font-medium text-blue-600 sm:py-6" href="portofolio.html">Portofolio</a>
+                              <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
+                                   href="#">Publication</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6 "
                                    href="contact.html">Contact</a>
                               <input data-hs-theme-switch
