--- a/public/portofolio.html
+++ b/public/portofolio.html
@@ -76,7 +76,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
           class="relative max-w-7xl w-full mx-auto sm:flex sm:items-center sm:justify-between px-6 lg:px-8 mt-16 lg:mt-24">
           <!-- Headline -->
           <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 justify-center place-items-center">
-               <div class="col-span-1 lg:col-span-3">
+               <div class="col-span-3">
                     <h1
                          class="text-4xl pb-10 font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 via-red-500 to-purple-700">
                          My Portofolio</h1>
@@ -88,7 +88,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                          Career Projects</div>
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="group flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -118,7 +118,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="group flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -149,7 +149,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="group flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -180,7 +180,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -213,7 +213,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -243,7 +243,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -281,7 +281,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                          Personal Projects</div>
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -313,7 +313,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -345,7 +345,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
@@ -375,7 +375,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <!-- End Card -->
                </div>
 
-               <div class="shadow-lg rounded-b-2xl group">
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1">
                     <!-- Card -->
                     <div
                          class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
