--- a/public/resume.html
+++ b/public/resume.html
@@ -128,8 +128,8 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
      <main class="relative max-w-7xl lg:max-w-5xl w-full mx-auto px-6 lg:px-8 mt-16 lg:mt-20">
 
           <!-- Riwayat Pekerjaan -->
-          <div class="grid grid-cols-1 gap-5 lg:grid-cols-3">
-               <div class="col-span-3 my-10">
+          <div class="grid grid-cols-2 gap-5 lg:grid-cols-3">
+               <div class="col-span-2 lg:col-span-3 my-10">
                     <h1
                          class="text-4xl text-center font-bold text-blue-500 dark:text-white dark:drop-shadow-[0_0_10px_rgba(0,255,255,0.7)]">
                          Resume <br><a
@@ -190,7 +190,6 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                          <!-- end -->
                     </div>
                </div>
-
           </div>
 
           <hr class="my-10 border-2">
@@ -269,7 +268,6 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                          <!-- end -->
                     </div>
                </div>
-
           </div>
 
           <hr class="my-10 border-2">
