Update cv link and change subtitle career

--- a/public/resume.html
+++ b/public/resume.html
@@ -76,7 +76,8 @@
                          <div class="flex items-center">
                               <img class="block dark:hidden" src="img/logo-lightk.png" width="6%" alt="">
                               <img class="hidden dark:block" src="img/logo-dark.png" width="6%" alt="">
-                              <a class="flex-none text-xl font-bold text-blue-600" href="index.html" aria-label="Brand">Jeremi
+                              <a class="flex-none text-xl font-bold text-blue-600" href="index.html"
+                                   aria-label="Brand">Jeremi
                                    Herodian</a>
                          </div>
                          <div class="sm:hidden">
@@ -106,7 +107,7 @@
                               <a class="font-medium text-blue-600 sm:py-6" href="resume.html">Resume</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="portofolio.html">Portofolio</a>
-                                   <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
+                              <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="#">Publication</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6 "
                                    href="contact.html">Contact</a>
@@ -133,14 +134,15 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                     <h1
                          class="text-4xl text-center font-bold text-blue-500 dark:text-white dark:drop-shadow-[0_0_10px_rgba(0,255,255,0.7)]">
                          Resume <br><a
-                              href="https://drive.google.com/file/d/1bVil1aalXgPjRSqXzu5jDrmaQZkVadBl/view?usp=drive_link"
+                              href="https://drive.google.com/file/d/1K-brXPz3nvOHN6Xk6HzSfxv6K-IHDBR9/view?usp=sharing"
                               class="py-1 px-3 mt-2 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600">
                               See my CV
                          </a></h1>
                </div>
 
                <!-- Headline -->
-               <div class="flex justify-center col-span-2 lg:col-span-1 h-fit lg:sticky lg:top-24 fromlabel1 bg-white rounded-lg">
+               <div
+                    class="flex justify-center col-span-2 lg:col-span-1 h-fit lg:sticky lg:top-24 fromlabel1 bg-white rounded-lg">
                     <p class="text-3xl my-2">👨‍💻</p>
                     <h1
                          class="text-3xl underline underline-offset-4 my-2 font-semibold text-blue-700 dark:text-blue-600">
@@ -171,7 +173,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                          <!-- start -->
                          <div class="col-span-2 lg:col-span-1 lg:text-end text-black">
                               <span class="text-blue-600 font-bold text-lg">2023 (2 bulan)</span> <br>
-                              <span class="font-semibold">Front-End</span><br>
+                              <span class="font-semibold">Web Designer & Developer</span><br>
                               <span class="text-black">PT. Guna Teknologi<br>Nusantara Denpasar,
                                    Bali</span></span><br>
                               <a href="https://drive.google.com/file/d/1O237UaQcvULofvivkKjJj_Hv889Ie4tP/view?usp=sharing"
@@ -197,7 +199,8 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
           <!-- Riwayat Bootcamps -->
           <div class="grid grid-cols-1 gap-5 lg:grid-cols-3">
                <!-- Headline -->
-               <div class="flex justify-center col-span-2 lg:col-span-1 h-fit lg:sticky lg:top-24 fromlabel2 bg-white rounded-lg">
+               <div
+                    class="flex justify-center col-span-2 lg:col-span-1 h-fit lg:sticky lg:top-24 fromlabel2 bg-white rounded-lg">
                     <p class="text-3xl my-2">🏫</p>
                     <h1
                          class="text-3xl my-2 underline underline-offset-4 font-semibold text-yellow-500 dark:text-yellow-400">
@@ -275,7 +278,8 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
           <!-- Riwayat Pendidikan -->
           <div class="grid grid-cols-1 gap-5 lg:grid-cols-3">
                <!-- Headline -->
-               <div class="flex justify-center col-span-2 lg:col-span-1 h-fit lg:sticky lg:top-24 fromlabel3 bg-white rounded-lg">
+               <div
+                    class="flex justify-center col-span-2 lg:col-span-1 h-fit lg:sticky lg:top-24 fromlabel3 bg-white rounded-lg">
                     <p class="text-3xl my-2">🧑‍🎓</p>
                     <h1
                          class="text-3xl my-2 underline underline-offset-4 font-semibold text-pink-700 dark:text-pink-600">
@@ -298,8 +302,9 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                          </div>
                          <div class="col-span-2 lg:col-span-1 text-black">
                               <p class="font-poppins text-justify">Kuliah di jurusan Ilmu Komputer dengan konsentrasi
-                                   pada bidang Komputasi Cerdas. Mendapatkan Predikat ... lulus tepat waktu dengan IPK
-                                   ...</p>
+                                   pada bidang Komputasi Cerdas. Mendapatkan Predikat "Dengan Pujian" lulus tepat waktu
+                                   dengan IPK
+                                   3,95</p>
                          </div>
                          <!-- end -->
                     </div>
@@ -324,7 +329,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
 
      </main>
      <!-- Main Content End -->
-     
+
      <div class="my-24"></div>
 
      <!-- Footer Start -->
