--- a/public/resume.html
+++ b/public/resume.html
@@ -107,7 +107,7 @@
                               <a class="font-medium text-blue-600 sm:py-6" href="resume.html">Resume</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="portofolio.html">Portofolio</a>
-                              <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
+                                   <a class="hover:cursor-not-allowed font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6"
                                    href="#">Publication</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6 "
                                    href="contact.html">Contact</a>
