--- a/public/index.html
+++ b/public/index.html
@@ -59,13 +59,43 @@
                                    href="#">Publication</a>
                               <a class="font-medium text-gray-600 hover:text-gray-400 dark:text-gray-300 dark:hover:text-gray-400 sm:py-6 "
                                    href="contact.html">Contact</a>
-                              <input data-hs-theme-switch
+                              <button type="button"
+                                   class="hs-dark-mode-active:hidden block hs-dark-mode font-medium text-gray-500 hover:text-blue-500 rounded-full"
+                                   data-hs-theme-click-value="dark">
+                                   <span class="group inline-flex shrink-0 justify-center items-center size-9">
+                                        <svg class="shrink-0 size-1" xmlns="http://www.w3.org/2000/svg" width="24"
+                                             height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                             <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+                                        </svg>
+                                   </span>
+                              </button>
+                              <button type="button"
+                                   class="hs-dark-mode-active:block hidden hs-dark-mode font-medium text-gray-500 hover:text-blue-500 rounded-full"
+                                   data-hs-theme-click-value="light">
+                                   <span class="group inline-flex shrink-0 justify-center items-center size-9">
+                                        <svg class="shrink-0 size-1" xmlns="http://www.w3.org/2000/svg" width="24"
+                                             height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                             <circle cx="12" cy="12" r="4"></circle>
+                                             <path d="M12 2v2"></path>
+                                             <path d="M12 20v2"></path>
+                                             <path d="m4.93 4.93 1.41 1.41"></path>
+                                             <path d="m17.66 17.66 1.41 1.41"></path>
+                                             <path d="M2 12h2"></path>
+                                             <path d="M20 12h2"></path>
+                                             <path d="m6.34 17.66-1.41 1.41"></path>
+                                             <path d="m19.07 4.93-1.41 1.41"></path>
+                                        </svg>
+                                   </span>
+                              </button>
+                              <!-- <input data-hs-theme-switch
                                    class="relative w-[3.25rem] h-7 bg-gray-100 checked:bg-none checked:bg-blue-600 border-2 border-slate-400 rounded-full cursor-pointer transition-colors ease-in-out duration-200 ring-1 ring-transparent focus:border-slate-700 focus:ring-slate-700 focus:outline-none appearance-none
 
 before:inline-block before:w-6 before:h-6 before:bg-white checked:before:bg-blue-200 before:translate-x-0 checked:before:translate-x-full before:shadow before:rounded-full before:transform before:ring-0 before:transition before:ease-in-out before:duration-200
 
 after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem] after:h-[.8125rem] after:bg-no-repeat after:bg-[right_center] after:bg-[length:.8125em_.8125em] after:bg-[url('../svg/illustration/moon-stars.svg')] checked:after:bg-[url('../svg/illustration/brightness-high.svg')] after:transform after:transition-all after:ease-in-out after:duration-200 after:opacity-70 checked:after:start-1.5 checked:after:end-auto"
-                                   type="checkbox" id="darkSwitch">
+                                   type="checkbox" id="darkSwitch"> -->
                          </div>
                     </div>
                </nav>
