--- a/public/portofolio.html
+++ b/public/portofolio.html
@@ -367,6 +367,50 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                          <div
                               class="h-[210px] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
                               <img loading="lazy" class="w-full h-full object-cover object-center rounded rounded-t-xl"
+                                   src="./img/project12.png" alt="" srcset="">
+                         </div>
+                         <div class="p-4 md:p-6 h-full flex flex-col justify-between">
+                              <span class="block mb-1 text-xs font-semibold uppercase text-blue-600 dark:text-blue-500">
+                                   Front-End
+                              </span>
+                              <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:hover:text-white">
+                                   Perpus
+                              </h3>
+                              <p class="mt-3 text-gray-500">
+                                   Perpus adalah desain UX/UX tampilan yang dibangun menggunakan Tailwind CSS dan React
+                                   JS. Tampilan dibangun menggunakan referensi toko buku Gramedia dengan beberapa
+                                   modifikasi tampilan.
+                              </p>
+                              <div class="flex gap-2 mt-2">
+                                   <p
+                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
+                                        Javascript</p>
+                                   <p
+                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
+                                        React JS</p>
+                                   <p
+                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
+                                        Tailwind CSS</p>
+                              </div>
+                         </div>
+                         <div
+                              class="mt-auto flex border-t border-gray-200 divide-x divide-gray-200 dark:border-gray-700 dark:divide-gray-700">
+                              <a class="w-full py-3 px-4 rounded-b-2xl inline-flex justify-center items-center gap-x-2 text-sm font-medium bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                                   href="https://toko-amelda-design.vercel.app/">
+                                   View Website
+                              </a>
+                         </div>
+                    </div>
+                    <!-- End Card -->
+               </div>
+
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1 h-full">
+                    <!-- Card -->
+                    <div
+                         class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
+                         <div
+                              class="h-[210px] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
+                              <img loading="lazy" class="w-full h-full object-cover object-center rounded rounded-t-xl"
                                    src="./img/project5.png" alt="" srcset="">
                          </div>
                          <div class="p-4 md:p-6 h-full flex flex-col justify-between">
@@ -396,51 +440,6 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                               <a class="w-full py-3 px-4 rounded-b-2xl inline-flex justify-center items-center gap-x-2 text-sm font-medium bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                                    href="https://toko-amelda-design.vercel.app/">
                                    View Website
-                              </a>
-                         </div>
-                    </div>
-                    <!-- End Card -->
-               </div>
-
-               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1 h-full">
-                    <!-- Card -->
-                    <div
-                         class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
-                         <div
-                              class="h-[210px] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
-                              <img loading="lazy" class="w-full h-full object-cover object-center rounded rounded-t-xl"
-                                   src="./img/project6.png" alt="" srcset="">
-                         </div>
-                         <div class="p-4 md:p-6 h-full flex flex-col justify-between">
-                              <span class="block mb-1 text-xs font-semibold uppercase text-blue-600 dark:text-blue-500">
-                                   Chatbot API
-                              </span>
-                              <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:hover:text-white">
-                                   Tsundere Chat Simulator
-                              </h3>
-                              <p class="mt-3 text-gray-500">
-                                   Project bot chat menggunakan machine learning dengan hasil pengujian akurasi sebesar
-                                   71,4%. Aplikasi dibuat menggunakan sistem Restful API menggunakan Fastapi dan
-                                   scikit-learn untuk model Naive Bayes. Aplikasi bisa berjalan berbasis website dan
-                                   telegram app.
-                              </p>
-                              <div class="flex gap-2 mt-2">
-                                   <p
-                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
-                                        Pyhton</p>
-                                   <p
-                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
-                                        ML-Model</p>
-                                   <p
-                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
-                                        Fastapi</p>
-                              </div>
-                         </div>
-                         <div
-                              class="mt-auto flex border-t border-gray-200 divide-x divide-gray-200 dark:border-gray-700 dark:divide-gray-700">
-                              <a class="w-full py-3 px-4 rounded-b-2xl inline-flex justify-center items-center gap-x-2 text-sm font-medium bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-                                   href="https://github.com/Jrhero14/TsundereChatSimulator">
-                                   View Repository
                               </a>
                          </div>
                     </div>
@@ -571,6 +570,51 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                               <a class="w-full py-3 px-4 rounded-b-2xl inline-flex justify-center items-center gap-x-2 text-sm font-medium bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                                    href="https://jrhero-simple-calculator.netlify.app/">
                                    View Website
+                              </a>
+                         </div>
+                    </div>
+                    <!-- End Card -->
+               </div>
+
+               <div class="shadow-lg rounded-b-2xl group col-span-3 lg:col-span-1 h-full">
+                    <!-- Card -->
+                    <div
+                         class="flex flex-col h-full group-hover:scale-105 transition-transform duration-500 ease-in-out bg-white border border-gray-200 shadow-sm rounded-2xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]">
+                         <div
+                              class="h-[210px] bg-no-repeat bg-cover bg-center flex flex-col justify-center items-center rounded-t-xl">
+                              <img loading="lazy" class="w-full h-full object-cover object-center rounded rounded-t-xl"
+                                   src="./img/project6.png" alt="" srcset="">
+                         </div>
+                         <div class="p-4 md:p-6 h-full flex flex-col justify-between">
+                              <span class="block mb-1 text-xs font-semibold uppercase text-blue-600 dark:text-blue-500">
+                                   Chatbot API
+                              </span>
+                              <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-300 dark:hover:text-white">
+                                   Tsundere Chat Simulator
+                              </h3>
+                              <p class="mt-3 text-gray-500">
+                                   Project bot chat menggunakan machine learning dengan hasil pengujian akurasi sebesar
+                                   71,4%. Aplikasi dibuat menggunakan sistem Restful API menggunakan Fastapi dan
+                                   scikit-learn untuk model Naive Bayes. Aplikasi bisa berjalan berbasis website dan
+                                   telegram app.
+                              </p>
+                              <div class="flex gap-2 mt-2">
+                                   <p
+                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
+                                        Pyhton</p>
+                                   <p
+                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
+                                        ML-Model</p>
+                                   <p
+                                        class="px-2 bg-blue-400 dark:bg-transparent border border-current text-slate-100 lg:border-white rounded-lg text-sm">
+                                        Fastapi</p>
+                              </div>
+                         </div>
+                         <div
+                              class="mt-auto flex border-t border-gray-200 divide-x divide-gray-200 dark:border-gray-700 dark:divide-gray-700">
+                              <a class="w-full py-3 px-4 rounded-b-2xl inline-flex justify-center items-center gap-x-2 text-sm font-medium bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                                   href="https://github.com/Jrhero14/TsundereChatSimulator">
+                                   View Repository
                               </a>
                          </div>
                     </div>
