--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@ after:absolute after:end-1.5 after:top-[calc(50%-0.40625rem)] after:w-[.8125rem]
                <div>
                     <h1 id="skill"
                          class="bg-gradient-to-r from-red-500 via-purple-500 to-blue-700 text-xs font-bold uppercase text-white p-1 rounded-md w-fit">
-                         Designer • Web Developer • Fullstack Developer</h1>
+                         Machine Learning Enthusiasm • Fullstack Web Developer</h1>
                     <div id="quotes" class="mt-8">
                          <p class="text-3xl font-thin text-slate-500 dark:text-white" id="quotesMain">
                          </p>
